fix responsive issue on mobile

--- a/src/pages/custom.css
+++ b/src/pages/custom.css
@@ -636,6 +636,10 @@ h4 {
         height: 100vh;
     }
 
+    .tech-badge {
+        width: 120px;
+    }
+
     .gitlab-logo {
         width: 50%;
         padding: 10px;
